# det-bypass

./: .clang-format  .gitignore  CMakeLists.txt  README.md  config.cmake
analysis/: .gitignore  get_data.md  lab_book.ipynb  peaks_oldxdp.ipynb  rdma.ipynb  xdp.ipynb  xdp_app_block_test.ipynb
analysis/comparison/: lib.py  local_plotter.ipynb  notebook.ipynb  todos.md
analysis/hwts/: client.out  comparison.ipynb  hwts.ipynb  server.out
analysis/hwts/ncons-pktloss-microbench/: plot.ipynb
analysis/hwts/processed-data/1switch/: lat_1410_120724.npy
analysis/hwts/processed-data/2switches/: lat_2249_100724.npy  lat_load10_2254_100724.npy  lat_load20_2256_100724.npy  lat_load30_2256_100724.npy  lat_load40_2258_100724.npy  lat_load50_2259_100724.npy  lat_load60_2259_100724.npy  lat_load70_2300_100724.npy  lat_load80_2301_100724.npy  lat_load90_2302_100724.npy
analysis/large-eval/img/: ts_diagram.xml
analysis/report-0424/: report_190424.tex
analysis/rpi-tests/: lib.py  stats.ipynb
analysis/sws-cluster/: det6g_plots.ipynb  processing.ipynb
analysis/tex/: report_190424.out  report_190424.tex
ansible/: ansible.cfg  build.yaml  collect_results.yaml  cstates.max.yaml  deploy.yaml  inventory.yaml  irq_coalescence.yaml  isolation.yaml  mlnx_en.yaml  prepare.yaml  rdma.yaml  reboot.yaml  xdp.yaml
ansible/files/: tuned.conf
ansible/group_vars/all/: variables.yaml
ansible/inventories/: c220g5.inventory.yaml  c6525.inventory.yaml  cluster.inventory.yaml  test.inventory.yaml  xl170.inventory.yaml
ansible/inventories/group_vars/: all.yaml
ansible/tests/: monitor.yaml  no_bypass.yaml  rdma_ud.yaml  xdp_poll.yaml  xdp_pure.yaml  xdp_xsk.yaml
ansible/tests/tasks/: check.yaml  run_client.yaml  run_server.yaml  wait.yaml
common/: common.h  net.c  net.h  persistence.c  persistence.h  utils.c  utils.h
det-bypass-rust/: Cargo.toml  README.md
det-bypass-rust/common/: Cargo.toml
det-bypass-rust/common/src/: bitset.rs  common_net.rs  consts.rs  lib.rs  persistence_agent.rs  utils.rs
det-bypass-rust/no_bypass_client/: Cargo.toml
det-bypass-rust/no_bypass_client/src/: main.rs
det-bypass-rust/no_bypass_lib/: Cargo.toml
det-bypass-rust/no_bypass_lib/src/: common_net.rs  lib.rs  persistence_agent.rs  utils.rs
det-bypass-rust/no_bypass_server/: Cargo.toml
det-bypass-rust/no_bypass_server/src/: main.rs
det-bypass-rust/performance/: Cargo.toml  interval_to_threshold.txt  perf.py
det-bypass-rust/performance/src/: main.rs
det-bypass-rust/pingpong-xdp/: Cargo.toml
det-bypass-rust/pingpong-xdp-server/: README.md
det-bypass-rust/pingpong-xdp-server/pingpong-xdp/: Cargo.toml
det-bypass-rust/pingpong-xdp-server/pingpong-xdp-common/: Cargo.toml
det-bypass-rust/pingpong-xdp-server/pingpong-xdp-ebpf/: Cargo.toml
det-bypass-rust/pingpong-xdp/pingpong-xdp/: Cargo.toml
det-bypass-rust/pingpong/src/: lib.rs
det-bypass-rust/pure_client/: Cargo.toml  README.md
det-bypass-rust/pure_client/pure_client/: Cargo.toml
det-bypass-rust/pure_client/pure_client-common/: Cargo.toml
det-bypass-rust/pure_client/pure_client-ebpf/: Cargo.toml
det-bypass-rust/pure_client/pure_client/src/: main.rs
det-bypass-rust/pure_server/: Cargo.toml  README.md
det-bypass-rust/pure_server/pure_server/: Cargo.toml
det-bypass-rust/pure_server/pure_server-common/: Cargo.toml
det-bypass-rust/pure_server/pure_server-ebpf/: Cargo.toml
det-bypass-rust/rdma_rc_client/: Cargo.toml
det-bypass-rust/rdma_rc_client/src/: main.rs
det-bypass-rust/rdma_rc_lib/: Cargo.toml
det-bypass-rust/rdma_rc_lib/src/: ib_net.rs  lib.rs  pingpong_context.rs  post_context.rs  ppc_rc.rs  ppc_ud.rs  rc.rs  ud.rs
det-bypass-rust/rdma_rc_server/: Cargo.toml
det-bypass-rust/rdma_rc_server/src/: main.rs
det-bypass-rust/rdma_ud_client/: Cargo.toml
det-bypass-rust/rdma_ud_client/src/: main.rs
det-bypass-rust/rdma_ud_server/: Cargo.toml
det-bypass-rust/rdma_ud_server/src/: main.rs
det-bypass-rust/report/: report.tex
det-bypass-rust/xdp/: Cargo.toml  README.md
det-bypass-rust/xdp-rust/: Cargo.toml  README.md
det-bypass-rust/xdp-rust/xdp-rust/: Cargo.toml
det-bypass-rust/xdp-rust/xdp-rust-common/: Cargo.toml
det-bypass-rust/xdp-rust/xdp-rust-ebpf/: Cargo.toml
det-bypass-rust/xdp-rust/xtask/src/: run.rs  (+1 more)
det-bypass-rust/xdp/xdp/: Cargo.toml
det-bypass-rust/xdp/xdp-common/: Cargo.toml
det-bypass-rust/xdp/xdp-ebpf/: Cargo.toml
det-bypass-rust/xsk-pingpong/: Cargo.toml  README.md
det-bypass-rust/xsk-pingpong-server/: Cargo.toml  README.md
det-bypass-rust/xsk-pingpong-server/xsk-pingpong-server/: Cargo.toml
det-bypass-rust/xsk-pingpong-server/xsk-pingpong-server-common/: Cargo.toml
det-bypass-rust/xsk-pingpong-server/xsk-pingpong-server-ebpf/: Cargo.toml
det-bypass-rust/xsk-pingpong-server/xsk-pingpong-server/src/: main.rs
det-bypass-rust/xsk-pingpong/xsk-pingpong/: Cargo.toml
det-bypass-rust/xsk-pingpong/xsk-pingpong-common/: Cargo.toml
det-bypass-rust/xsk-pingpong/xsk-pingpong-ebpf/: Cargo.toml
det-bypass-rust/xsk-pingpong/xsk-pingpong/src/: main.rs
no-bypass/: CMakeLists.txt  hwts.cpp  main.c
no-bypass/src/: args.c  args.h
rdma/: CMakeLists.txt  README.md  rc_pingpong.c  ud_pingpong.c
rdma/ansible/: inventory.yaml  prepare.yaml
rdma/pingpongs/: CMakeLists.txt  README.md  asyncwatch.c  device_list.c  devinfo.c  pingpong.c  pingpong.h  rc_pingpong.c  rc_pingpong2.c  srq_pingpong.c  uc_pingpong.c  ud_pingpong.c  ud_pingpong2.c  xsrq_pingpong.c
rdma/pingpongs/ccan/: array_size.h  build_assert.h  check_type.h  compiler.h  container_of.h  ilog.c  ilog.h  list.c  list.h  minmax.h  str.c  str.h  str_debug.h
rdma/pingpongs/src/: ib_net.c  ib_net.h  pingpong.c  pingpong.h
rdma/src/: args.c  args.h  ib_net.h
sleep/: README.md  alpaca  compile_commands.json  main.cpp  sleep  sleep.cpp  sleep.hpp
xdp/: CMakeLists.txt  common.h  loader.c  pingpong.c  pingpong_pure.c  pingpong_xsk.c  pp_poll.c  pp_pure.c  pp_sock.c  xdp-loading.c  xdp-loading.h
xdp/src/: args.c  args.h  net.c  net.h  persistence.c  persistence.h  utils.c  utils.h  xdp-loading.c  xdp-loading.h
(+37 files in other folders)
