[package]
name = "pure_client"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = "0.12"
aya-log = "0.2"
clap = { version = "4.1", features = ["derive"] }
pure_client-common = { path = "../pure_client-common", features = ["user"] }
anyhow = "1"
env_logger = "0.10"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
pingpong = {path = "../../pingpong/"}
common = {path = "../../common/"}

[[bin]]
name = "pure_client"
path = "src/main.rs"
