[package]
name = "xsk-pingpong-server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = "0.12"
aya-log = "0.2"
clap = { version = "4.1", features = ["derive"] }
xsk-pingpong-server-common = { path = "../xsk-pingpong-server-common", features = ["user"] }
anyhow = "1"
env_logger = "0.10"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
common = {path = "../../common/"}
network-types = "*"
pingpong = {path = "../../pingpong/"}
libxdp = {git = "https://github.com/JacobSalvi/libxdp"}
xsk-rs = {git = "https://github.com/JacobSalvi/xsk-rs.git"}



[[bin]]
name = "xsk-pingpong-server"
path = "src/main.rs"
