[package]
name = "xsk-pingpong"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = "0.12"
aya-log = "0.2"
clap = { version = "4.1", features = ["derive"] }
xsk-pingpong-common = { path = "../xsk-pingpong-common", features = ["user"] }
anyhow = "1"
env_logger = "0.10"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
xsk-rs = {git = "https://github.com/JacobSalvi/xsk-rs.git"}
common = {path = "../../common/"}
libxdp-sys = {package ="libxdp", git = "https://github.com/JacobSalvi/libxdp/"}
network-types = "*"
pingpong = {path ="../../pingpong/"}

[[bin]]
name = "xsk-pingpong"
path = "src/main.rs"
